--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,12 @@
             <artifactId>log4j-core</artifactId>
             <version>2.17.1</version>
        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
